--- a/sign.html
+++ b/sign.html
@@ -29,7 +29,7 @@
             <button type="submit">Sign Up</button>
         </form>
 
-        <p>Already have an account? <a href="login.html">Login</a></p>
+        <p>Already have an account? <a href="index.html">Login</a></p>
     </div>
 
     <script>
@@ -70,7 +70,7 @@
 
             alert("Sign-up successful! Redirecting to Login page...");
             setTimeout(() => {
-                window.location.href = "login.html";
+                window.location.href = "index.html";
             }, 1000);
         });
 
